# streetwarp-lambda

./: .gitignore  README.md  deploy_lambda.sh  handler.py  package-lock.json  package.json  package_lambda.sh  pyproject.toml  serverless.yml  template.yml  tsconfig.json  webpack.config.js
res/: update_streetwarp.sh
src/: main.ts  messages.ts
